css/style.css
/****** General ***********/
* {
    font-family: 'Raleway', sans-serif;
}

:root {
    --main-color: #0065FC;
    --main-bg-color: #F2F2F2;
    --filter-bg-color: #DEEBFF;
}

.main-container {
    width: 100%;
    max-width: 1440px;
    padding: 0 50px;
    box-sizing: border-box;
}

.fa-solid {
    color: var(--main-color);
}


body {
    display: flex;
    justify-content: center;
    margin: 0 auto;
    padding: 0 0px 0 0px;
}

/*HEADER*/
header {
    display: flex;
    justify-content: space-between;
}

header img {
    align-self: flex-start;
    height: 1.2rem;
    margin-top: 13px;
}

nav ul {
    display: flex;
    flex-wrap: wrap;
    justify-content: flex-end;
    gap: 69px;
    margin: 23px 1px;
    list-style: none;
}

nav a:hover {
    color:#0065FC;
    border-top: solid #0065FC 5px;
    padding-top: 20px;
}

/*TEXTE*/

h1 {
    font-size: 22px;
    width: 100%;
    font-weight: 700;
    line-height: 26px;
    justify-content: flex-start;
    align-items: center;
  }

  .filtre-container p {
    height: 21px;
    font-size: 18px;
    font-weight: 700;
  }
  
  h2 {
    display: flex;
    align-items: center;
    margin: 0;
    margin-bottom: 33px;
  }


  .activites-title h2 {
    gap: 30px;
  }

/*FORM*/ 

form {
    width: 100%;
    height: 49px;
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;
    border-radius: 15px;
    margin-top: 35px;
    margin-bottom: 35px;
    box-sizing: border-box;
}  

.fa-location-dot {
   
    background-color: #F2F2F2;
    border-radius: 15px 0 0 15px;
    width: 50px;
    height: 49px;
    border: 0 solid #F2F2F2;
    display: flex;
    align-items: center;
    justify-content: center;
    color: black;
}

/*BUTONS*/

input {
    width: auto;
    height: 100%;
    border: solid var(--main-bg-color);
    box-sizing: border-box;
    margin: 0px 0px 15px 0px;
    padding-left: 24px;
    font-size: 18px;
    font-weight: bold;
    outline: none;
}

button {
    background-color: #0065FC;
    color: white;
    border-radius: 0px 15px 15px 0px;
    border:#0065FC;
    width: auto;
    height: 100%;
    font-size: 18px;
    font-weight: 700;
}

.btn-mobile {
    display: none;
    padding: 16px;
}

.btn-desktop {
    padding: 14px 16px 14px 16px;
    font-size: 18px;
    font-weight: 700;
}

/*FILTRES*/ 

.filtre-container {
    display: flex;
    flex-direction: row;
    align-items: baseline;
}

.filtre-container ul {
    list-style: none;
    width: 100%;
    display: flex;
    gap: 10px;
    font-weight: bold;
    padding:15px;
}

.filtre-container li {
    border: 2px solid #d9d9d9;
    border-radius: 45px;
    padding: 13px 19px 13px 20px;

}

.filtre-container a {
    text-decoration: none;
}

.filtre-container li:hover {
    background-color: #DEEBFF;
}

/*Infos*/ 

.phraseInfo{
    font-weight: 600;
    font-size: 14px;
  }
  
  
  i.cercle{
    display: flex;
    color: #0065FC;
    font-size: 12px;
    border: 1px;
    border-style: solid;
    border-color: rgb(77, 76, 76);
    border-radius: 100%;
    height: 20px;
    width: 20px; 
    justify-content: center;
    align-items: center;
    margin-right: 5px;
    padding: 1px;
  }
  
  
  .info{
    display: flex;
    align-items: center;
    margin: 20px 0 30px 0;
  }
  


a {
    color: inherit;
    text-decoration: none;
}


.section-title {
    margin: 0;
    font-size: 22px;
}

.card {
    background-color: white;
    border-radius: 20px;
    filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
    padding: 5px;
}

.card img {
    object-fit: cover;
}

.card-title {
    font-size: 16px;
}

.euro {
    font-weight: 700;
}

.neutral-star {
    color: var(--main-bg-color)
}

/****** Hebergements And Populaires ***********/
.hebergements-and-populaires {
    display: flex;
    justify-content: space-between;
    gap: 30px;
    
}

.hebergements-and-populaires section {
    background-color: var(--main-bg-color);
    border-radius: 20px;
    box-sizing: border-box;
    padding: 30px;
    margin-bottom: 60px;
}

/****** Hebergements ***********/
.hebergements {
    background-color: #F2F2F2;
    width: 100%;
    border-radius: 15px;
    gap: 30px;
}

.hebergements-cards {
    display: flex;
    flex-wrap: wrap;
    gap: 30px;
    width: 100%;
}

.hotel {
    width: 30%;
    background: white;
    border-radius: 20px;
    padding: 5px;
    box-sizing: border-box;
    box-shadow: 0 5px 16px #0000002e;
}

.hotel a {
    display: flex;
    flex-direction: column;
    height: 207.25px;
    width: 100%;
}

.hotel img {
    border-radius: 15px 15px 0px 0px;
    width: 100%;
    height: 120px;
    object-fit: cover;
}

.hotel p {
    margin: 5px 10px;
    font-weight: 400;
}

.hotel h3 {
    font-size: 19px;
    font-weight: 700;
    margin: 5px 10px;
}

.card-rating {
    margin: 5px 10px;
}

.show-more {
  color: black;
  font-size: 18px;
  font-weight: 700;
  margin-bottom: 30px;
  

}



/****** Populaires ***********/
.populaires {
    width: 45%;
    padding: 30px;
    

}

.populaires-title {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.populaires-title a {
    text-decoration: none;
    color: black;
  }
.populaires-cards .card {
    display: flex;
    margin-top: 33px;
}

.populaires-cards img {
    width: 33%;
    height: 144px;
    border-top-left-radius: 20px;
    border-bottom-left-radius: 20px;
    object-fit: cover;
}

.populaires-cards .card-content {
    width: 67%;
    padding-left: 15px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    box-sizing: border-box;
}

.populaires-cards .card-title {
    margin-top: 10px;
    margin-bottom: 4px;
}

.populaires-cards .card-subtitle {
    margin: 0;
}

.populaires-cards .card-rating {
    margin-bottom: 5px;
}

/***** Activités ***/

.activites section {
    width: 80%;
    margin-top: 40px;
}

.card-title {
    margin-left: 15px;
}

.containerActivités {
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    align-content: space-between;
    padding: 15px;
    height: 496px;
    gap: 30px;
    box-sizing: border-box;

}

.card-activités {
    background-color: white;
    border-radius: 20px;
    box-shadow: 0 5px 16px #0000002e;
    margin-bottom: 10px;
    
}


.card-activités img {

    object-fit: cover;
    border-radius: 20px 20px 0 0;
    height: 380px;
    width: 297.5px;
    box-sizing: border-box;
}

.activites-title {
    margin-left: 15px;
    display: flex;
    align-items: center;

}



/* FOOTER */ 

footer {
    background-color: #F2F2F2;
    margin: 0 40px 0 40px;
    gap: 30px;
}
.blocfooter {
    display: flex;
    max-width: 100%;
    padding: 10px 40px;
    box-sizing: border-box;
   
}

.footer-container {
    width: 40%;

}

.footer-container h3 {
    display: block;
    font-size: 20px;
    font-weight: bold;
}

.footer-container a {
    color: black;
    display: block;
    margin: 15px 0;
    font-weight: 500;
}

/* Le code ci-dessous correspond à la version responsive uniquement */

/****** Media queries ***********/
/* Medium devices (tablets, less/equal than 1024px) */
@media s (max-width: 1024px) {
    .hebergements-and-populaires {
        flex-direction: column;
    }

    .hebergements {
        width: 100%;
    }

    .populaires {
        width: 100%;
        margin-top: 50px;
    }

    .populaires-cards {
        display: flex;
        flex-direction: row;
        justify-content: space-between;
    }

    .populaires-cards a {
        width: 30%;
    }

    .populaires-cards .card-title {
        font-size: 14px;
    }

    .populaires-cards .card-subtitle {
        font-size: 13px;
    }
}

/* Small devices (phones, less than 768px) */
@media (max-width: 767.98px) {
    /* ... */
}

